--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: geschenk25-db
-          property: connectionString
+          property: internalDatabaseUrl
       - key: JWT_SECRET
         generateValue: true
 
