--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: node
     buildCommand: npm install --production=false && npm run build
     startCommand: npm start
+    postDeployCommand: npm run migrate
     envVars:
       - key: NODE_ENV
         value: production
