--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "migrate": "node dist/migrate.js"
+    "migrate": "node dist/migrate.js",
+    "cleanup": "tsx src/cleanup.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
